  . Fixed bug #61072 (Memory leak when restoring an exception handler).
    (Nikic, Laruence)
  . Fixed bug #61011 (Crash when an exception is thrown by __autoload
    accessing a static property). (Laruence)
  . Fixed bug #61000 (Exceeding max nesting level doesn't delete numerical 
    vars). (Laruence)
  . Fixed bug #60978 (exit code incorrect). (Laruence)

- Standard:
  . Fixed memory leak in substr_replace. (Pierrick)
  . make max_file_uploads ini directive settable outside of php.ini (Rasmus)

- Installation
  . Fixed bug #61172 (Add Apache 2.4 support). (Chris Jones)

01 Mar 2012, PHP 5.4.0 

- Installation:
  . autoconf 2.59+ is now supported (and required) for generating the
    configure script with ./buildconf. Autoconf 2.60+ is desirable
    otherwise the configure help order may be incorrect.  (Rasmus, Chris Jones)

- Removed legacy features:
  . break/continue $var syntax. (Dmitry)
  . Safe mode and all related php.ini options. (Kalle)
  . register_globals and register_long_arrays php.ini options. (Kalle)
  . import_request_variables(). (Kalle)
  . allow_call_time_pass_reference. (Pierrick)
  . define_syslog_variables php.ini option and its associated function. (Kalle)
  . highlight.bg php.ini option. (Kalle)
  . safe_mode, safe_mode_gid, safe_mode_include_dir,
    safe_mode_exec_dir, safe_mode_allowed_env_vars and
    safe_mode_protected_env_vars php.ini options.
  . zend.ze1_compatibility_mode php.ini option.
  . Session bug compatibility mode (session.bug_compat_42 and
    session.bug_compat_warn php.ini options). (Kalle)
  . session_is_registered(), session_register() and session_unregister()
    functions. (Kalle)
  . y2k_compliance php.ini option. (Kalle)
  . magic_quotes_gpc, magic_quotes_runtime and magic_quotes_sybase
    php.ini options. get_magic_quotes_gpc, get_magic_quotes_runtime are kept
    but always return false, set_magic_quotes_runtime raises an
    E_CORE_ERROR. (Pierrick, Pierre)