@@ -12,6 +12,8 @@ PHP                                                                        NEWS
   . Fixed bug #61000 (Exceeding max nesting level doesn't delete numerical 
     vars). (Laruence)
   . Fixed bug #60978 (exit code incorrect). (Laruence)
+  . Fixed bug #60573 (type hinting with "self" keyword causes weird errors).
+    (Laruence)
 
 - Standard:
   . Fixed memory leak in substr_replace. (Pierrick)
